@@ -30,16 +30,16 @@ public class TestConfigOverlay extends LuceneTestCase {
     assertTrue(isEditableProp("updateHandler/autoCommit/maxDocs", true, null));
     assertTrue(isEditableProp("updateHandler/autoCommit/maxTime", true, null));
     assertTrue(isEditableProp("updateHandler/autoCommit/openSearcher", true, null));
-    assertTrue(isEditableProp("updateHandler/autoCommit/maxDocs", true, null));
-    assertTrue(isEditableProp("updateHandler/autoCommit/maxTime", true, null));
+    assertTrue(isEditableProp("updateHandler/autoSoftCommit/maxDocs", true, null));
+    assertTrue(isEditableProp("updateHandler/autoSoftCommit/maxTime", true, null));
     assertTrue(isEditableProp("updateHandler/commitWithin/softCommit", true, null));
     assertTrue(isEditableProp("updateHandler/indexWriter/closeWaitsForMerges", true, null));
 
     assertTrue(isEditableProp("updateHandler.autoCommit.maxDocs", false, null));
     assertTrue(isEditableProp("updateHandler.autoCommit.maxTime", false, null));
     assertTrue(isEditableProp("updateHandler.autoCommit.openSearcher", false, null));
-    assertTrue(isEditableProp("updateHandler.autoCommit.maxDocs", false, null));
-    assertTrue(isEditableProp("updateHandler.autoCommit.maxTime", false, null));
+    assertTrue(isEditableProp("updateHandler.autoSoftCommit.maxDocs", false, null));
+    assertTrue(isEditableProp("updateHandler.autoSoftCommit.maxTime", false, null));
     assertTrue(isEditableProp("updateHandler.commitWithin.softCommit", false, null));
     assertTrue(isEditableProp("updateHandler.indexWriter.closeWaitsForMerges", false, null));
     assertTrue(isEditableProp("query.useFilterForSortedQuery", false, null));
