@@ -268,6 +268,7 @@ Other Changes
 
 * SOLR-7712: fixed test to account for aggregate floating point precision loss (hossman)
 
+* SOLR-7740: Fix typo bug with TestConfigOverlay (Christine Poerschke via Ramkumar Aiyengar)
 
 ==================  5.2.1 ==================
 
